--- a/Denisevich_MailSender/View/RecipientEditView.xaml
+++ b/Denisevich_MailSender/View/RecipientEditView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d" 
              xmlns:local="clr-namespace:Denisevich_MailSender.View"
+             xmlns:inf="clr-namespace:Denisevich_MailSender.Infrastructure"
              DataContext="{Binding Path=WpfMailSenderViewModel, Source={StaticResource Locator}}"
              d:DesignHeight="450" d:DesignWidth="800">
     <DockPanel>
@@ -20,6 +21,16 @@
         </StackPanel>
         <GroupBox Header="Получатель">
             <Grid DataContext="{Binding CurrentRecipient}">
+                <Grid.Resources>
+                    <Style TargetType="TextBox">
+                        <Style.Triggers>
+                            <Trigger Property="Validation.HasError" Value="True">
+                                <Setter Property="ToolTip" 
+                                        Value="{Binding (Validation.Errors)[0].ErrorContent, RelativeSource={RelativeSource Self}}"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Grid.Resources>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition/>
@@ -32,16 +43,36 @@
                 </Grid.RowDefinitions>
 
                 <TextBlock Grid.Column="0" Grid.Row="0" Text="Id:"/>
-                <TextBox Grid.Column="1" Grid.Row="0" IsReadOnly="True" 
-                         Text="{Binding Id, Mode=OneWay}"/>
+                <TextBox Grid.Column="1" Grid.Row="0" 
+                         Text="{Binding Id, NotifyOnValidationError=True}"
+                         Validation.Error="OnRecepientID_ValidationError">
+                    <Validation.ErrorTemplate>
+                        <ControlTemplate>
+                            <DockPanel>
+                                <TextBlock Text="!!!" FontWeight="Bold" FontSize="14"/>
+                                <Border BorderBrush="DarkRed" BorderThickness="3" CornerRadius="3">
+                                    <AdornedElementPlaceholder/>
+                                </Border>
+                            </DockPanel>
+                        </ControlTemplate>
+                    </Validation.ErrorTemplate>
+                </TextBox>
 
                 <TextBlock Grid.Column="0" Grid.Row="1" Text="Name:"/>
-                <TextBox Grid.Column="1" Grid.Row="1" 
-                         Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBox Grid.Column="1" Grid.Row="1">
+                    <TextBox.Text>
+                        <Binding Path="Name" NotifyOnValidationError="True" ValidatesOnDataErrors="True">
+                            <Binding.ValidationRules>
+                                <inf:StringLengthValidationRule StringLength="6"/>
+                                <ExceptionValidationRule/>
+                            </Binding.ValidationRules>
+                        </Binding>
+                    </TextBox.Text>
+                </TextBox>
 
                 <TextBlock Grid.Column="0" Grid.Row="2" Text="Email:"/>
                 <TextBox Grid.Column="1" Grid.Row="2" 
-                         Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}"/>
+                         Text="{Binding Email, NotifyOnValidationError=True, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"/>
 
                 <TextBlock Grid.Column="0" Grid.Row="3" Text="Comment:"/>
                 <TextBox Grid.Column="1" Grid.Row="3" 
